# gym-zelda-1

./: .travis.yml  CHANGELOG.md  README.md  __main__.py  main.sh  pyproject.toml  requirements.txt  run.py  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  publish.yml
gym-zelda-1/: __init__.py  zelda_env.py
gym_zelda_1/: __init__.py  _registration.py  actions.py  zelda_env.py
gym_zelda_1/_app/: cli.py
gym_zelda_1/tests/: test_cli.py  test_registration.py  test_zelda_env.py
